--- a/README
+++ b/README
@@ -29,6 +29,8 @@
 2013-11-11	增加重载配置文件功能, 修复初始化网络连接失败后退出程序的BUG，修改掉线重连接机制，优化性能；
 2013-11-19	解决以太网连接断开后无法自动恢复的问题.
 2014-02-28 增加报文分隔功能：当报文长度大于1024字节时，自动进行分包发送；
+2014-10-08 修改数据库操作方式，解决内存泄露问题。
+2014-10-21 修复扫描动态协议库函数，解决动态协议名称之间无逗号间隔的问题,增加针对西克麦哈克(北京)公司中控设备的数据扫描协议库:./lib/smc；
 
 存在问题:
 1、尚未增加市电状态判断及掉电通知(发212包文)功能。
